--- a/unit-14/137-CA-14.tex
+++ b/unit-14/137-CA-14.tex
@@ -84,20 +84,16 @@
 %===================================================
 \begin{document}
 \begin{frame}
-	\frametitle{MAT137 Lecture 41 --- }
+	\frametitle{MAT137 Lecture 65 ---  Power series }
 
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
-			\item {\bf Watch videos}
+			\item {\bf Watch videos 14.3, 14.4 }
 		\end{itemize}
 \end{frame}
-	%===================================================
 
-	%----------------------------------------------------------------------------------------
-	%	Power series
-	%----------------------------------------------------------------------------------------
-	%------------------------------
+
 	\begin{frame}[t]
 		\frametitle{Interval of convergence}
 
@@ -112,35 +108,7 @@
 			\end{multicols}
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{What can you conclude?}
 
-		Think of the power series ${\displaystyle \sum_{n}^{\infty} a_nx^n}$. Do not
-		assume $a_{n} \geq0$.
-
-		In each case, may the given series be absolutely convergent (AC)? conditionally
-		convergent (CC)? divergent (D)? all of them?
-
-		\begin{center}
-			\begin{tabular}{c|c|c|c|c|}
-				\hline
-				IF               & ${\displaystyle \sum_{n}^{\infty} a_n 3^n}$ is ...        & AC     & CC     & D      \\
-				\hline
-				\hline
-				                 & ${\displaystyle \sum_{n}^{\infty} a_n 2^n}$ may be ...    & \tasma & \tasma & \tasma \\
-				\cline{2-5} THEN & ${\displaystyle \sum_{n}^{\infty} a_n (-3)^n}$ may be ... & \tasma & \tasma & \tasma \\
-				\cline{2-5}      & ${\displaystyle \sum_{n}^{\infty} a_n 4^n}$ may be ...    & \tasma & \tasma & \tasma \\
-				\hline
-			\end{tabular}
-		\end{center}
-	\end{frame}
-	%------------------------------
-	%----------------------------------------------------------------------------------------
-	%	Preview of Taylor series and applications
-	%----------------------------------------------------------------------------------------
-	%------------------------------
 	\begin{frame}[t]
 		\frametitle{Writing functions as power series}
 
@@ -161,218 +129,60 @@
 			\end{multicols}
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Challenge}
 
-		Compute \quad ${\displaystyle  A = \sum_{n=1}^{\infty} \frac{n}{3^{n}} }$
 
-		\hrulefill \p
 
-		\begin{enumerate}
-			\item What is the value of the sum ${\displaystyle \sum_{n=0}^{\infty} x^n}$
-				?
 
-			\item Use derivatives to relate ${\displaystyle \sum_{n}^{\infty} x^n}$ and
-				${\displaystyle \sum_{n}^{\infty} nx^{n-1}}$.
 
-			\item Compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n-1} }$. \quad Then
-				compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n} }$.
 
-			\item Compute the value of series $A$.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Challenge}
 
-		Compute \quad ${\displaystyle  A = \sum_{n=1}^{\infty} \frac{n}{3^{n}} }$
-		\quad and \quad
-		${\displaystyle  B = \sum_{n=1}^{\infty} \frac{n^{2}}{3^{n}} }$
+\begin{frame}
+	\frametitle{MAT137 Lecture 66 --- Taylor polynomials }
 
-		\hrulefill \p
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 14.5, 14.6}
+		\end{itemize}
+\end{frame}
 
-		\begin{enumerate}
-			\item What is the value of the sum ${\displaystyle \sum_{n=0}^{\infty} x^n}$
-				?
 
-			\item Use derivatives to relate ${\displaystyle \sum_{n}^{\infty} x^n}$ and
-				${\displaystyle \sum_{n}^{\infty} nx^{n-1}}$.
-
-			\item Compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n-1} }$. \quad Then
-				compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n} }$.
-
-			\item Compute the value of series $A$.
-
-			\item Compute the value of series $B$.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Challenge - 2}
-
-		We want to calculate the value of
-		\[
-			\sum_{n=0}^{\infty}\frac{(-1)^{n}}{(2n+1) \, 3^{n} }
-		\]
-
-		\p \hrulefill
-
-		\begin{enumerate}
-			\item Write ${\displaystyle F(x) = \arctan x}$ as a power series. \vv
-
-				\emph{Hint:} Compute ${\displaystyle F'(x)}$. Using the geometric series,
-				write ${\displaystyle F'(x)}$ as a series. Then integrate. \vv
-
-			\item Now calculate the original sum.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	%----------------------------------------------------------------------------------------
-	%	Definition of Taylor polynomials and Taylor series
-	%----------------------------------------------------------------------------------------
-	%------------------------------
-	%------------------------------
 	\begin{frame}[t]
 		\frametitle{Warm up}
 
 		Write down the (various equivalent) definitions of Taylor polynomial you
 		have learned so far.
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Tangent line}
 
-		Let $f$ be a $C^{1}$ function at $a \in \R$.
-
-		Then the tangent line of $f$ at $a$ is given by
-		\[
-			y = L(x)
-		\]
-		\begin{enumerate}
-			\item Recall the explicit formula for $L$
-
-			\item Prove that $L$ is the 1-st Taylor polynomial for $f$ at $a$ using the
-				1st definition.
-
-			\item Prove that $L$ is the 1-st Taylor polynomial for $f$ at $a$ using the
-				2nd definition.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
 	\begin{frame}[t]
 		\frametitle{Taylor polynomial of a polynomial}
 
 		Let $f(x) = x^{3}$.
 
-		Let $Q_{n,a}$ be the $n$-th Taylor polynomial for $f$ at $a$. \vvv
+		Let $P_{n}$ be the $n$-th Taylor polynomial for $f$ at $0$. \vvv
 
 		\begin{enumerate}
-			\item Using the 2nd definition, find $Q_{2,0}$.
+			\item Find $P_3$.
 
-				Then verify it also satisfies the 1st definition. \vvv \p
+				Verify it satisfies the 1st and 2nd definition. \vvv 
 
-			\item Repeat for $Q_{3,0}$ \vvv
-
-			\item Repeat for $Q_{3,1}$ \vvv
-
-			\item Repeat for $Q_{2,1}$.
+			\item Find $P_{2}$ 
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
-		\smallerfont
-		\frametitle{True or False -- Taylor polynomials}
+		\frametitle{More Taylor polynomial of a polynomial}
 
-		Let $f$ be a function defined at and near $a \in \R$. Let ${\displaystyle n \in \N}$.
-		\\ Let $P_{n}$ be the $n$-th Taylor polynomial for $f$ at $a$. \\ Which ones
-		of these are true?
+		Let $f(x) = x^{3}$.
 
-		\begin{enumerate}
-			\item $P_{n}$ is an approximation for $f$ of order $n$ near $a$.
-				\vfill
-
-			\item $f$ is an approximation for $P_{n}$ of order $n$ near $a$.
-				\vfill
-
-			\item $P_{3}$ is an approximation for $f$ of order $4$ near $a$.
-				\vfill
-
-			\item $P_{4}$ is an approximation for $f$ of order $3$ near $a$.
-				\vfill
-
-			\item ${\displaystyle \lim_{x \to a} \left[ f(x) - P_n(x) \right] = 0}$
-				\vfill
-
-			\item ${\displaystyle \lim_{x \to a} \frac{f(x) - P_{n}(x)}{(x-a)^{n}} = 0 }$
-				\vfill
-
-			\item If $x$ is close to $a$, then $f(x) = P_{n}(x)$.
-				\vfill
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{True or False -- smooth functions}
-
-		Let $f$ be a function. Let $a \in \R$. Let $m \in \N$. \vvv
-		\begin{enumerate}
-			\item IF $f$ is continuous, \; THEN $f$ is $C^{0}$.
-
-			\item IF $f$ is $C^{0}$, \; THEN $f$ is continuous.
-
-			\item IF $f$ is differentiable, \; THEN $f$ is $C^{1}$.
-
-			\item IF $f$ is $C^{1}$, \; THEN $f$ is differentiable.
-
-			\item IF $f$ is $C^{\infty}$, \; THEN $\forall n \in \N$, $f$ is $C^{n}$.
-
-			\item IF $\forall n \in \N$, $f$ is $C^{n}$, \; THEN $f$ is $C^{\infty}$.
-
-			\item IF $f$ is $C^{m}$ at $a$, \\ \; THEN $f$ is $C^{m}$ on some interval
-				centered at $a$.
-
-			\item IF $f$ is $C^{m}$ at $a$, \\ \; THEN $f$ is $C^{m-1}$ on some
-				interval centered at $a$.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{True or False -- Operations with smooth functions}
-
-		Let $f$ and $g$ be two functions with domain $\R$. Let $n \in \N$. \vvv
+		Let $Q_{n}$ be the $n$-th Taylor polynomial {\bf for $f$ at $1$}. \vvv
 
 		\begin{enumerate}
-			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f + g$ is $C^{n}$.
-
-			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f \cdot g$ is $C^{n}$.
-
-			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f \circ g$ is $C^{n}$.
-
-			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f + g$ is $C^{\infty}$.
-
-			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f \cdot g$ is $C^{\infty}$.
-
-			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f \circ g$ is $C^{\infty}$.
+			\item Find $Q_3$.
+			\item Find $Q_2$.
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Approximating functions }
 
-		Which one of the following functions is a better approximation for \;
-		${\displaystyle F(x) = \sin x + \cos x}$ \; near 0? \vvv
-		\begin{enumerate}
-			\item ${\displaystyle f(x) = 1 + x - \frac{x^{2}}{2} }$ \vvv
-
-			\item ${\displaystyle g(x) = e^x -x^2 }$ \vvv
-
-			\item ${\displaystyle h(x) = 1 + \ln (1+x)}$
-		\end{enumerate}
-
-		\ \hfill \href{https://www.desmos.com/calculator/1hqedw17c8}{$\clubsuit$}
-	\end{frame}
-	%------------------------------
 	\begin{frame}[t]
 		\smallerfont
 		\frametitle{A polynomial given its derivatives}
@@ -395,7 +205,36 @@
 				\]
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
+
+	\begin{frame}[t]
+		\smallerfont
+		\frametitle{A polynomial given its derivatives 2}
+
+		\begin{enumerate}
+			\item Let $f$ be a $C^4$ function at $0$. Construct a polynomial $P$ that satisfies
+				\begin{align*}
+					P(0) &= f(0)\\
+					P'(0) &= f'(0)\\
+					P''(0) &= f''(0)\\
+					P^{(3)}(0) &= f^{(3)}(0)\\
+					P^{(4)}(0) &= f^{(4)}(0)
+				\end{align*}
+		\end{enumerate}
+	\end{frame}
+
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 67 --- Taylor series }
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 14.7, 14.8 }
+		\end{itemize}
+\end{frame}
+
 	\begin{frame}[t]
 		\frametitle{Competition!}
 
@@ -417,7 +256,7 @@
 				{\bf No calculators!}
 		\end{itemize}
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
 		\frametitle{Competition!}
 		\vspace{-.8cm}
@@ -465,37 +304,48 @@
 
 		What is $P(x)$?
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
-		\frametitle{cosine}
+		\frametitle{$\arcsin$}
 
-		Obtain the Maclaurin series for $h(x) = \cos x$.
-
-		There are at least two ways to do this: \vvv
+		Let ${\displaystyle f(x)=\frac{1}{\sqrt{1+x}}}$.
 		\begin{enumerate}
-			\item Use the general formula for Maclaurin series. \vvv
+			\item Find a formula for its derivatives ${\displaystyle f^{(n)}(x)}$.
+				\vvv
 
-			\item Use the Maclaurin series for $\sin$ to compute ${\displaystyle \cos x = \frac{d}{dx} \sin x}$.
+			\item Write its Maclaurin series at $0$. Call it $S(x)$. \vvv
+
+			\item What is the radius of convergence of series $S(x)$?
+
+				{\setsize{12} \emph{Note:} Use without proof that ${\displaystyle f(x)=S(x)}$ inside the interval of convergence. }
+				\vvv
+
+			\item Use this result to write $h(x) = \arcsin$ as a power series centered
+				at $0$.
+
+				{\setsize{12} \emph{Hint:} Compute ${\displaystyle h'(x)}$. } \vvv
+
+			\item What is ${\displaystyle h^{(7)}(0)}$?
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Interval of convergence of Maclaurin series}
 
-		\begin{enumerate}
-			\item (Recall) Write down the Maclaurin series for the following functions
-				\[
-					f(x) = e^{x}, \quad \quad g(x) = \sin x, \quad \quad h(x) = \cos x
-				\]
 
-			\item Compute the interval of convergence for each one of them.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	%----------------------------------------------------------------------------------------
-	%	Analytic functions
-	%----------------------------------------------------------------------------------------
-	%------------------------------
+
+
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 68 ---  	Analytic functions }
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 14.9, 14.10 }
+		\end{itemize}
+\end{frame}
+
+
 	\begin{frame}[t]
 		\frametitle{Warm up}
 
@@ -609,40 +459,25 @@
 		\emph{Notation:} ${\displaystyle J_{x,a}}$ is the interval between $x$ and
 		$a$
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{A ${\displaystyle C^{\infty}}$ but not analytic function}
 
-		Consider the function
-		${\displaystyle F(x) = \begin{cases}e^{-1/x}&\mbox{ if }x >0, \\ 0&\mbox{ if }x \leq 0.\end{cases}}$
 
-		\begin{enumerate}
-			\item Prove that, for every $n \in \N$, ${\displaystyle \lim_{t \to \infty} t^n e^{-t} =0}$.
 
-			\item Prove that, for every $n \in \N$, ${\displaystyle \lim_{x \to 0^+} \frac{e^{-1/x}}{x^{n}}=0}$.
 
-			\item Calculate ${\displaystyle F'(x)}$ for $x>0$.
 
-			\item Calculate ${\displaystyle F'(x)}$ for $x <0$.
 
-			\item Calculate ${\displaystyle F'(0)}$ from the definition.
 
-			\item Calculate ${\displaystyle F''(0)}$ from the definition.
 
-			\item Prove that for every $n \in \N$, ${\displaystyle F^{(n)}(0) = 0}$.
+\begin{frame}
+	\frametitle{MAT137 Lecture 69 --- Constructing new Taylor series}
 
-			\item Write the Maclaurin series for $F$ at $0$.
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 14.12, 14.14 }
+		\end{itemize}
+\end{frame}
 
-			\item Is $F$ analytic? Is it $C^{\infty}$?
-		\end{enumerate}
-	\end{frame}
 
-	%------------------------------
-	%----------------------------------------------------------------------------------------
-	%	Constructing new Taylor series
-	%----------------------------------------------------------------------------------------
-	%------------------------------
 	\begin{frame}[t]
 		\smallerfont
 		\frametitle{Taylor series gymnastics}
@@ -665,28 +500,7 @@
 		\emph{Note:} You do not need to take any derivatives. You can reduce them
 		all to other Maclaurin series you know.
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Taylor series not at 0}
 
-		Write the Taylor series...
-		\begin{enumerate}
-			\item for \; ${\displaystyle f(x) = e^x}$ \; at \; $a=-1$
-
-			\item for \; ${\displaystyle g(x) = \sin x}$ \; at \; ${\displaystyle a = \pi/4}$
-
-			\item for \; ${\displaystyle H(x) = 1/x}$ \; at \; ${\displaystyle a = 3}$
-		\end{enumerate}
-
-		\
- You can do these problems in two ways:
-		\begin{enumerate}
-			\item Compute first few derivatives, guess the pattern, use general formula
-
-			\item Use substitution ${\displaystyle u = x - a}$, use known Maclaurin
-				series (without computing any derivative).
-		\end{enumerate}
-	\end{frame}
 	%------------------------------
 	\begin{frame}[t]
 		\frametitle{arctan}
@@ -710,7 +524,7 @@
 				\]
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
 		\frametitle{$\arcsin$}
 
@@ -734,130 +548,22 @@
 			\item What is ${\displaystyle h^{(7)}(0)}$?
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{Parity}
 
-		\begin{enumerate}
-			\item Write down the definition of odd function and even function. (Assume
-				the domain is $\R$.) \vvv
 
-			\item Let $f$ be an odd, $C^{\infty}$ function. What can you say about its
-				Maclaurin series? What if $f$ is even? \vvv
 
-				\emph{Hint:} Think of $\sin$ and $\cos$. \vvv
 
-			\item Prove it. \vvv
 
-				\emph{Hints:}
-				\begin{itemize}
-					\item Use the general formula for the Maclaurin series.
 
-					\item If $h$ is odd then what is $h(0)$?
+\begin{frame}
+	\frametitle{MAT137 Lecture 70 --- Applications}
 
-					\item The derivative of an even function is ...?
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 14.11, 14.13 }
+		\end{itemize}
+\end{frame}
 
-					\item The derivative of an odd function is ...?
-				\end{itemize}
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Product of Taylor series}
-
-		Let ${\displaystyle f(x) = e^{x} \ln(1+x)}$ \vvv
-
-		\begin{enumerate}
-			\item Write the 4-th Taylor polynomial for $f$ at $a=0$. \vvv
-
-				{\setsize{11} \emph{Hint:} Write the first few terms of the Maclaurin series for each factor and multiply them. }
-				\vv
-
-			\item What is ${\displaystyle f^{(4)}(0)}$? \vv
-
-				\p
-
-			\item Use it to calculate the limit
-
-				\[
-					\lim_{x \to 0}\frac{e^{x} \ln(1+x) + \ln(1-x)}{x^{4}}
-				\]
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{Composition of Taylor series}
-
-		Let ${\displaystyle g(x) = e^{\sin x}}$. \vvv
-
-		\begin{enumerate}
-			\item Write the 4-th Taylor polynomial for $g$ at $a=0$. \vvv
-
-				{\setsize{11} \emph{Hint:} First use the Maclaurin series for the exponential. Then use the Maclaurin series for $\sin$ and treat it like a polynomial. You only need to keep the first few terms. }
-				\vvv
-
-				\p
-
-			\item What is ${\displaystyle g^{(4)}(0)}$? \vvv
-
-				\p
-
-			\item Find a value of $a \in \R$ such that the limit
-				\[
-					\lim_{x \to 0}\frac{e^{\sin x}- e^{x} + ax^{3} }{x^{4}}
-				\]
-				exists and is not 0. Then compute the limit.
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{Tangent}
-
-		There is no nice, compact formula for the Maclaurin series of $\tan$, but we
-		can obtain the first few terms. Set
-		\[
-			\tan x = c_{1} x + c_{3} x^{3} + c_{5}x^{5} + \ldots
-		\]
-		By definition of $\tan$, we have:
-		\[
-			\rojo{\sin x}= ( \azul{\cos x}) ( \verde{\tan x})
-		\]
-		Thus {\setsize{11} \[\left[ \rojo{ x - \frac{x^{3}}{3!} + \frac{x^{5}}{5!} + \ldots}\right] \; = \; \left[ \azul{1 - \frac{x^{2}}{2!} + \frac{x^{4}}{4!} + \ldots}\right] \cdot \left[ \verde{c_1 x + c_3 x^3 + c_5 x^5 + \ldots}\phantom{\frac{1}{1}}\right]\] }
-
-		Multiply the two series on the right. Obtain equations for the coefficients $c
-		_{n}$ and solve for the first few ones.
-	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\smallerfont
-		\frametitle{Secant}
-
-		I want to obtain the first few terms of the Maclaurin series of
-		${\displaystyle f(x) = \sec x}$. Notice that
-		\begin{equation}
-			\label{eq:sec}\sec x \; = \; \frac{1}{\cos x}\; = \; \frac{1}{1 - \left[ 1
-			- \cos x\right]}\; = \; \frac{1}{1-u}
-		\end{equation}
-		where I have called ${\displaystyle u = 1 - \cos x}$. \; Notice that as
-		$x \to 0$, $u \to 0$. \vvv
-
-		Use the geometric series in \eqref{eq:sec}. Then write $u$ as a power series
-		centered at 0. Then expand and regroups terms. \vv
-
-		\begin{enumerate}
-			\item Use the above to obtain the 6-th Maclaurin polynomial for $f$. \p
-
-			\item Without taking any derivative, what is ${\displaystyle f^{(6)}(0)}$?
-		\end{enumerate}
-	\end{frame}
-	%------------------------------
-	%----------------------------------------------------------------------------------------
-	%	Applications
-	%----------------------------------------------------------------------------------------
-	%------------------------------
 	\begin{frame}[t]
 		\frametitle{Integrals}
 
@@ -876,7 +582,7 @@
 
 		Estimate $A$ with an error smaller than $0.001$.
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
 		\smallerfont
 		\frametitle{Add these series}
@@ -903,29 +609,24 @@
 				\vfill
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	\begin{frame}[t]
-		\frametitle{Add more series}
-		\vspace{-.5cm}
 
-		\begin{enumerate}
-			\addtocounter{enumi}{4}
-			\begin{multicols}{2}
-				\item ${\displaystyle \sum_{n=1}^{\infty} \frac{n}{3^{n}}}$ \vv \item ${\displaystyle \sum_{n=1}^{\infty} \frac{n^{2}}{3^{n}}}$
-				\vv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{x^{n+2}}{(n+1)(n+2)} }$
-				\vvv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{x^{n}}{(n+2)n!}}$ \vvv
-				\item ${\displaystyle \sum_{n=0}^{\infty}(-1)^n \frac{(n+1)}{(2n)!} \, 2^n }$
-				\vvv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{(-1)^{n}}{(2n+1)3^{n}}}$
-				\vvv
-			\end{multicols}
-		\end{enumerate}
-		\vv
 
-		\emph{Hint:} Take derivatives or antiderivatives of series whose values you
-		know.
-	\end{frame}
-	%------------------------------
-	%------------------------------
+
+
+
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 71 ---  	Applications 2}
+
+	\vfill
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos }
+		\end{itemize}
+\end{frame}
+
 	\begin{frame}[t]
 		\frametitle{Limits}
 
@@ -943,7 +644,7 @@
 				\vfill
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
+
 	\begin{frame}[t]
 		\frametitle{Estimations}
 
@@ -962,8 +663,561 @@
 			\item Estimate $B$ with an error smaller than 0.001.
 		\end{enumerate}
 	\end{frame}
-	%------------------------------
-	%-----------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{frame}
+	\frametitle{MAT137 Lecture 72 --- Outroduction}
+
+	\vfill
+	{\bf Wecome to the end!}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%	%===================================================
+%
+%	%----------------------------------------------------------------------------------------
+%	%	Power series
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{What can you conclude?}
+%
+%		Think of the power series ${\displaystyle \sum_{n}^{\infty} a_nx^n}$. Do not
+%		assume $a_{n} \geq0$.
+%
+%		In each case, may the given series be absolutely convergent (AC)? conditionally
+%		convergent (CC)? divergent (D)? all of them?
+%
+%		\begin{center}
+%			\begin{tabular}{c|c|c|c|c|}
+%				\hline
+%				IF               & ${\displaystyle \sum_{n}^{\infty} a_n 3^n}$ is ...        & AC     & CC     & D      \\
+%				\hline
+%				\hline
+%				                 & ${\displaystyle \sum_{n}^{\infty} a_n 2^n}$ may be ...    & \tasma & \tasma & \tasma \\
+%				\cline{2-5} THEN & ${\displaystyle \sum_{n}^{\infty} a_n (-3)^n}$ may be ... & \tasma & \tasma & \tasma \\
+%				\cline{2-5}      & ${\displaystyle \sum_{n}^{\infty} a_n 4^n}$ may be ...    & \tasma & \tasma & \tasma \\
+%				\hline
+%			\end{tabular}
+%		\end{center}
+%	\end{frame}
+%	%------------------------------
+%	%----------------------------------------------------------------------------------------
+%	%	Preview of Taylor series and applications
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Challenge}
+%
+%		Compute \quad ${\displaystyle  A = \sum_{n=1}^{\infty} \frac{n}{3^{n}} }$
+%
+%		\hrulefill \p
+%
+%		\begin{enumerate}
+%			\item What is the value of the sum ${\displaystyle \sum_{n=0}^{\infty} x^n}$
+%				?
+%
+%			\item Use derivatives to relate ${\displaystyle \sum_{n}^{\infty} x^n}$ and
+%				${\displaystyle \sum_{n}^{\infty} nx^{n-1}}$.
+%
+%			\item Compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n-1} }$. \quad Then
+%				compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n} }$.
+%
+%			\item Compute the value of series $A$.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Challenge}
+%
+%		Compute \quad ${\displaystyle  A = \sum_{n=1}^{\infty} \frac{n}{3^{n}} }$
+%		\quad and \quad
+%		${\displaystyle  B = \sum_{n=1}^{\infty} \frac{n^{2}}{3^{n}} }$
+%
+%		\hrulefill \p
+%
+%		\begin{enumerate}
+%			\item What is the value of the sum ${\displaystyle \sum_{n=0}^{\infty} x^n}$
+%				?
+%
+%			\item Use derivatives to relate ${\displaystyle \sum_{n}^{\infty} x^n}$ and
+%				${\displaystyle \sum_{n}^{\infty} nx^{n-1}}$.
+%
+%			\item Compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n-1} }$. \quad Then
+%				compute ${\displaystyle \sum_{n=1}^{\infty} n x^{n} }$.
+%
+%			\item Compute the value of series $A$.
+%
+%			\item Compute the value of series $B$.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Challenge - 2}
+%
+%		We want to calculate the value of
+%		\[
+%			\sum_{n=0}^{\infty}\frac{(-1)^{n}}{(2n+1) \, 3^{n} }
+%		\]
+%
+%		\p \hrulefill
+%
+%		\begin{enumerate}
+%			\item Write ${\displaystyle F(x) = \arctan x}$ as a power series. \vv
+%
+%				\emph{Hint:} Compute ${\displaystyle F'(x)}$. Using the geometric series,
+%				write ${\displaystyle F'(x)}$ as a series. Then integrate. \vv
+%
+%			\item Now calculate the original sum.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	%----------------------------------------------------------------------------------------
+%	%	Definition of Taylor polynomials and Taylor series
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Tangent line}
+%
+%		Let $f$ be a $C^{1}$ function at $a \in \R$.
+%
+%		Then the tangent line of $f$ at $a$ is given by
+%		\[
+%			y = L(x)
+%		\]
+%		\begin{enumerate}
+%			\item Recall the explicit formula for $L$
+%
+%			\item Prove that $L$ is the 1-st Taylor polynomial for $f$ at $a$ using the
+%				1st definition.
+%
+%			\item Prove that $L$ is the 1-st Taylor polynomial for $f$ at $a$ using the
+%				2nd definition.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{True or False -- Taylor polynomials}
+%
+%		Let $f$ be a function defined at and near $a \in \R$. Let ${\displaystyle n \in \N}$.
+%		\\ Let $P_{n}$ be the $n$-th Taylor polynomial for $f$ at $a$. \\ Which ones
+%		of these are true?
+%
+%		\begin{enumerate}
+%			\item $P_{n}$ is an approximation for $f$ of order $n$ near $a$.
+%				\vfill
+%
+%			\item $f$ is an approximation for $P_{n}$ of order $n$ near $a$.
+%				\vfill
+%
+%			\item $P_{3}$ is an approximation for $f$ of order $4$ near $a$.
+%				\vfill
+%
+%			\item $P_{4}$ is an approximation for $f$ of order $3$ near $a$.
+%				\vfill
+%
+%			\item ${\displaystyle \lim_{x \to a} \left[ f(x) - P_n(x) \right] = 0}$
+%				\vfill
+%
+%			\item ${\displaystyle \lim_{x \to a} \frac{f(x) - P_{n}(x)}{(x-a)^{n}} = 0 }$
+%				\vfill
+%
+%			\item If $x$ is close to $a$, then $f(x) = P_{n}(x)$.
+%				\vfill
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{True or False -- smooth functions}
+%
+%		Let $f$ be a function. Let $a \in \R$. Let $m \in \N$. \vvv
+%		\begin{enumerate}
+%			\item IF $f$ is continuous, \; THEN $f$ is $C^{0}$.
+%
+%			\item IF $f$ is $C^{0}$, \; THEN $f$ is continuous.
+%
+%			\item IF $f$ is differentiable, \; THEN $f$ is $C^{1}$.
+%
+%			\item IF $f$ is $C^{1}$, \; THEN $f$ is differentiable.
+%
+%			\item IF $f$ is $C^{\infty}$, \; THEN $\forall n \in \N$, $f$ is $C^{n}$.
+%
+%			\item IF $\forall n \in \N$, $f$ is $C^{n}$, \; THEN $f$ is $C^{\infty}$.
+%
+%			\item IF $f$ is $C^{m}$ at $a$, \\ \; THEN $f$ is $C^{m}$ on some interval
+%				centered at $a$.
+%
+%			\item IF $f$ is $C^{m}$ at $a$, \\ \; THEN $f$ is $C^{m-1}$ on some
+%				interval centered at $a$.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{True or False -- Operations with smooth functions}
+%
+%		Let $f$ and $g$ be two functions with domain $\R$. Let $n \in \N$. \vvv
+%
+%		\begin{enumerate}
+%			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f + g$ is $C^{n}$.
+%
+%			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f \cdot g$ is $C^{n}$.
+%
+%			\item IF $f$ and $g$ are $C^{n}$, \; THEN $f \circ g$ is $C^{n}$.
+%
+%			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f + g$ is $C^{\infty}$.
+%
+%			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f \cdot g$ is $C^{\infty}$.
+%
+%			\item IF $f$ and $g$ are $C^{\infty}$, \; THEN $f \circ g$ is $C^{\infty}$.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Approximating functions }
+%
+%		Which one of the following functions is a better approximation for \;
+%		${\displaystyle F(x) = \sin x + \cos x}$ \; near 0? \vvv
+%		\begin{enumerate}
+%			\item ${\displaystyle f(x) = 1 + x - \frac{x^{2}}{2} }$ \vvv
+%
+%			\item ${\displaystyle g(x) = e^x -x^2 }$ \vvv
+%
+%			\item ${\displaystyle h(x) = 1 + \ln (1+x)}$
+%		\end{enumerate}
+%
+%		\ \hfill \href{https://www.desmos.com/calculator/1hqedw17c8}{$\clubsuit$}
+%	\end{frame}
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{cosine}
+%
+%		Obtain the Maclaurin series for $h(x) = \cos x$.
+%
+%		There are at least two ways to do this: \vvv
+%		\begin{enumerate}
+%			\item Use the general formula for Maclaurin series. \vvv
+%
+%			\item Use the Maclaurin series for $\sin$ to compute ${\displaystyle \cos x = \frac{d}{dx} \sin x}$.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Interval of convergence of Maclaurin series}
+%
+%		\begin{enumerate}
+%			\item (Recall) Write down the Maclaurin series for the following functions
+%				\[
+%					f(x) = e^{x}, \quad \quad g(x) = \sin x, \quad \quad h(x) = \cos x
+%				\]
+%
+%			\item Compute the interval of convergence for each one of them.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	%----------------------------------------------------------------------------------------
+%	%	Analytic functions
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{A ${\displaystyle C^{\infty}}$ but not analytic function}
+%
+%		Consider the function
+%		${\displaystyle F(x) = \begin{cases}e^{-1/x}&\mbox{ if }x >0, \\ 0&\mbox{ if }x \leq 0.\end{cases}}$
+%
+%		\begin{enumerate}
+%			\item Prove that, for every $n \in \N$, ${\displaystyle \lim_{t \to \infty} t^n e^{-t} =0}$.
+%
+%			\item Prove that, for every $n \in \N$, ${\displaystyle \lim_{x \to 0^+} \frac{e^{-1/x}}{x^{n}}=0}$.
+%
+%			\item Calculate ${\displaystyle F'(x)}$ for $x>0$.
+%
+%			\item Calculate ${\displaystyle F'(x)}$ for $x <0$.
+%
+%			\item Calculate ${\displaystyle F'(0)}$ from the definition.
+%
+%			\item Calculate ${\displaystyle F''(0)}$ from the definition.
+%
+%			\item Prove that for every $n \in \N$, ${\displaystyle F^{(n)}(0) = 0}$.
+%
+%			\item Write the Maclaurin series for $F$ at $0$.
+%
+%			\item Is $F$ analytic? Is it $C^{\infty}$?
+%		\end{enumerate}
+%	\end{frame}
+%
+%	%------------------------------
+%	%----------------------------------------------------------------------------------------
+%	%	Constructing new Taylor series
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Taylor series not at 0}
+%
+%		Write the Taylor series...
+%		\begin{enumerate}
+%			\item for \; ${\displaystyle f(x) = e^x}$ \; at \; $a=-1$
+%
+%			\item for \; ${\displaystyle g(x) = \sin x}$ \; at \; ${\displaystyle a = \pi/4}$
+%
+%			\item for \; ${\displaystyle H(x) = 1/x}$ \; at \; ${\displaystyle a = 3}$
+%		\end{enumerate}
+%
+%		\
+% You can do these problems in two ways:
+%		\begin{enumerate}
+%			\item Compute first few derivatives, guess the pattern, use general formula
+%
+%			\item Use substitution ${\displaystyle u = x - a}$, use known Maclaurin
+%				series (without computing any derivative).
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{Parity}
+%
+%		\begin{enumerate}
+%			\item Write down the definition of odd function and even function. (Assume
+%				the domain is $\R$.) \vvv
+%
+%			\item Let $f$ be an odd, $C^{\infty}$ function. What can you say about its
+%				Maclaurin series? What if $f$ is even? \vvv
+%
+%				\emph{Hint:} Think of $\sin$ and $\cos$. \vvv
+%
+%			\item Prove it. \vvv
+%
+%				\emph{Hints:}
+%				\begin{itemize}
+%					\item Use the general formula for the Maclaurin series.
+%
+%					\item If $h$ is odd then what is $h(0)$?
+%
+%					\item The derivative of an even function is ...?
+%
+%					\item The derivative of an odd function is ...?
+%				\end{itemize}
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Product of Taylor series}
+%
+%		Let ${\displaystyle f(x) = e^{x} \ln(1+x)}$ \vvv
+%
+%		\begin{enumerate}
+%			\item Write the 4-th Taylor polynomial for $f$ at $a=0$. \vvv
+%
+%				{\setsize{11} \emph{Hint:} Write the first few terms of the Maclaurin series for each factor and multiply them. }
+%				\vv
+%
+%			\item What is ${\displaystyle f^{(4)}(0)}$? \vv
+%
+%				\p
+%
+%			\item Use it to calculate the limit
+%
+%				\[
+%					\lim_{x \to 0}\frac{e^{x} \ln(1+x) + \ln(1-x)}{x^{4}}
+%				\]
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{Composition of Taylor series}
+%
+%		Let ${\displaystyle g(x) = e^{\sin x}}$. \vvv
+%
+%		\begin{enumerate}
+%			\item Write the 4-th Taylor polynomial for $g$ at $a=0$. \vvv
+%
+%				{\setsize{11} \emph{Hint:} First use the Maclaurin series for the exponential. Then use the Maclaurin series for $\sin$ and treat it like a polynomial. You only need to keep the first few terms. }
+%				\vvv
+%
+%				\p
+%
+%			\item What is ${\displaystyle g^{(4)}(0)}$? \vvv
+%
+%				\p
+%
+%			\item Find a value of $a \in \R$ such that the limit
+%				\[
+%					\lim_{x \to 0}\frac{e^{\sin x}- e^{x} + ax^{3} }{x^{4}}
+%				\]
+%				exists and is not 0. Then compute the limit.
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{Tangent}
+%
+%		There is no nice, compact formula for the Maclaurin series of $\tan$, but we
+%		can obtain the first few terms. Set
+%		\[
+%			\tan x = c_{1} x + c_{3} x^{3} + c_{5}x^{5} + \ldots
+%		\]
+%		By definition of $\tan$, we have:
+%		\[
+%			\rojo{\sin x}= ( \azul{\cos x}) ( \verde{\tan x})
+%		\]
+%		Thus {\setsize{11} \[\left[ \rojo{ x - \frac{x^{3}}{3!} + \frac{x^{5}}{5!} + \ldots}\right] \; = \; \left[ \azul{1 - \frac{x^{2}}{2!} + \frac{x^{4}}{4!} + \ldots}\right] \cdot \left[ \verde{c_1 x + c_3 x^3 + c_5 x^5 + \ldots}\phantom{\frac{1}{1}}\right]\] }
+%
+%		Multiply the two series on the right. Obtain equations for the coefficients $c
+%		_{n}$ and solve for the first few ones.
+%	\end{frame}
+%	%------------------------------
+%	\begin{frame}[t]
+%		\smallerfont
+%		\frametitle{Secant}
+%
+%		I want to obtain the first few terms of the Maclaurin series of
+%		${\displaystyle f(x) = \sec x}$. Notice that
+%		\begin{equation}
+%			\label{eq:sec}\sec x \; = \; \frac{1}{\cos x}\; = \; \frac{1}{1 - \left[ 1
+%			- \cos x\right]}\; = \; \frac{1}{1-u}
+%		\end{equation}
+%		where I have called ${\displaystyle u = 1 - \cos x}$. \; Notice that as
+%		$x \to 0$, $u \to 0$. \vvv
+%
+%		Use the geometric series in \eqref{eq:sec}. Then write $u$ as a power series
+%		centered at 0. Then expand and regroups terms. \vv
+%
+%		\begin{enumerate}
+%			\item Use the above to obtain the 6-th Maclaurin polynomial for $f$. \p
+%
+%			\item Without taking any derivative, what is ${\displaystyle f^{(6)}(0)}$?
+%		\end{enumerate}
+%	\end{frame}
+%	%------------------------------
+%	%----------------------------------------------------------------------------------------
+%	%	Applications
+%	%----------------------------------------------------------------------------------------
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	\begin{frame}[t]
+%		\frametitle{Add more series}
+%		\vspace{-.5cm}
+%
+%		\begin{enumerate}
+%			\addtocounter{enumi}{4}
+%			\begin{multicols}{2}
+%				\item ${\displaystyle \sum_{n=1}^{\infty} \frac{n}{3^{n}}}$ \vv \item ${\displaystyle \sum_{n=1}^{\infty} \frac{n^{2}}{3^{n}}}$
+%				\vv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{x^{n+2}}{(n+1)(n+2)} }$
+%				\vvv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{x^{n}}{(n+2)n!}}$ \vvv
+%				\item ${\displaystyle \sum_{n=0}^{\infty}(-1)^n \frac{(n+1)}{(2n)!} \, 2^n }$
+%				\vvv \item ${\displaystyle \sum_{n=0}^{\infty} \frac{(-1)^{n}}{(2n+1)3^{n}}}$
+%				\vvv
+%			\end{multicols}
+%		\end{enumerate}
+%		\vv
+%
+%		\emph{Hint:} Take derivatives or antiderivatives of series whose values you
+%		know.
+%	\end{frame}
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	%------------------------------
+%	%-----------------------------
 \end{document}
 %-----------------------------
 %-----------------------------
