--- a/unit-12/137-CA-12.tex
+++ b/unit-12/137-CA-12.tex
@@ -120,6 +120,23 @@
  \emph{Hint:}
 		${\displaystyle \frac{1}{x^{2}+x} = \frac{(x+1) - (x)}{x(x+1)}}$
 	\end{frame}
+	\begin{frame}[t]
+		\frametitle{Computation?}
+		Consider the following argument.
+		We know 
+		\[\displaystyle \frac{1}{x^{2}+x} = \frac{(x+1) - (x)}{x(x+1)}=\frac{1}{x}-\frac{1}{x+1}\]
+		So
+		\[
+			\int_{1}^{\infty}\frac{1}{x^{2}+x}dx=
+			\int_{1}^{\infty}\frac{1}{x}dx-\int_{1}^{\infty}\frac{1}{x+1}dx
+		\]
+		Since $\int_{1}^{\infty}\frac{1}{x}dx=\int_{1}^{\infty}\frac{1}{x+1}dx=\infty$, we see
+		\[
+			\int_{1}^{\infty}\frac{1}{x^{2}+x}dx=\infty-\infty,
+		\]
+		 and so it doesn't exist.
+
+	\end{frame}
 	%------------------------------
 	\begin{frame}[t]
 		\frametitle{The most important improper integrals}
