--- a/unit-12/137-CA-12.tex
+++ b/unit-12/137-CA-12.tex
@@ -239,7 +239,7 @@
 
 		Let $a \in \R$. \\ Let $f$ and $g$ be continuous functions on $[a, \infty)$.
 		\\ Assume that ${\displaystyle \boxed{\forall x \geq a, \quad 0 \leq \azul{f(x)} \leq \rojo{g(x)}}}$.
-		\\ What can we conclude?
+		\\ Which statements are correct?
 
 		\begin{enumerate}
 			\item IF ${\displaystyle \azul{\int_a^{\infty} f(x) dx}}$ is convergent,
@@ -262,7 +262,7 @@
 
 		Let $a \in \R$. \\ Let $f$ and $g$ be continuous functions on $[a, \infty)$.
 		\\ Assume that ${\displaystyle \boxed{\forall x \geq a, \quad \azul{f(x)} \leq \rojo{g(x)}}}$.
-		\\ What can we conclude?
+		\\ Which statements are correct?
 
 		\begin{enumerate}
 			\item IF ${\displaystyle \azul{\int_a^{\infty} f(x) dx}}$ is convergent,
@@ -285,7 +285,7 @@
 
 		Let $a \in \R$. \\ Let $f$ and $g$ be continuous functions on $[a, \infty)$.
 		\\ Assume that ${\displaystyle \boxed{\exists M \geq a \; \mbox{ s.t. } \; \forall x \geq M, \quad 0 \leq \azul{f(x)} \leq \rojo{g(x)}}}$.
-		\\ What can we conclude?
+		\\ Which statements are correct?
 
 		\begin{enumerate}
 			\item IF ${\displaystyle \azul{\int_a^{\infty} f(x) dx}}$ is convergent,
