--- a/unit-13/137-CA-13.tex
+++ b/unit-13/137-CA-13.tex
@@ -193,7 +193,7 @@
 		Calculate the value of the following series:
 
 		\begin{enumerate}
-			\item ${\displaystyle 1 + \frac{13}{+} \frac{19}{+} \frac{1}{27} + \frac{1}{81} + \ldots}$
+			\item ${\displaystyle 1 + \frac{1}{3}+ \frac{1}{9}+ \frac{1}{27} + \frac{1}{81} + \ldots}$
 				\vv
 
 			\item ${\displaystyle \frac{1}{2} - \frac{1}{4} + \frac{1}{8} - \frac{1}{16} + \frac{1}{32} - \ldots}$
